# RDP_VR

./: .gitmodules  README.md  build.gradle  build.gradle.kts  build_all  gradle.properties  key.jks  local.properties  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  SessionActivity.cpp  log.h  rdpvr.cpp  tools.cpp  tools.h
app/src/main/java/com/mefazm/rdpvr/: Log.kt  MainActivity.kt  SessionActivity.kt  SessionView.kt
app/src/main/java/com/mefazm/rdvr/: SessionActivity.kt
app/src/main/res/drawable/: ic_launcher_freerdp.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
